Ajoute une description des variables

--- a/Datasets/sklearn/Housing-prices-Boston-source.ipynb
+++ b/Datasets/sklearn/Housing-prices-Boston-source.ipynb
@@ -7,32 +7,31 @@
     "# Housing prices in Boston\n",
     "\n",
     "\n",
-    "This dataset contains information collected by the U.S Census Service concerning housing in the area of Boston Mass. It was obtained from the StatLib archive (http://lib.stat.cmu.edu/datasets/boston), and has been used extensively throughout the literature to benchmark algorithms. However, these comparisons were primarily done outside of Delve and are thus somewhat suspect. The dataset is small in size with only 506 cases.\n",
+    "This dataset contains information collected by various sources concerning housing in the area of Boston Mass in 1970. The sources are the U.S Census Service, FBI and other sources. The dataset contains 506 cases. \n",
     "\n",
     "There are 14 variables:\n",
     "* CRIM : per capita crime rate by town\n",
-    "* ZN : proportion of residential land zoned for lots over 25,000 sq.ft.\n",
-    "* INDUS : proportion of non:retail business acres per town.\n",
-    "* CHAS : Charles River dummy variable (1 if tract bounds river; 0 otherwise)\n",
-    "* NOX : nitric oxides concentration (parts per 10 million)\n",
-    "* RM : average number of rooms per dwelling\n",
-    "* AGE : proportion of owner:occupied units built prior to 1940\n",
+    "* ZN : proportion of residential land zoned for lots over 25,000 sq.ft. (high value restricts construction of small lot houses)\n",
+    "* INDUS : proportion of non retail business acres per town (measures the impact of noise, heavy traffic and visual effects)\n",
+    "* CHAS : Charles River dummy variable (1 if tract bounds river; 0 otherwise). Captures the amenities of a riverside location.\n",
+    "* NOX : nitric oxides concentration (parts per 10 million) (measures air pollution)\n",
+    "* RM : average number of rooms per dwelling (measures the spaciousness)\n",
+    "* AGE : proportion of owner occupied units built prior to 1940 (related to structure quality)\n",
     "* DIS : weighted distances to five Boston employment centres\n",
     "* RAD : index of accessibility to radial highways\n",
-    "* TAX : full value property tax rate per 10000 US Dollars\n",
-    "* PTRATIO : pupil teacher ratio by town\n",
+    "* TAX : full value property tax rate per 10,000 US Dollars (measures the cost of public services)\n",
+    "* PTRATIO : pupil teacher ratio by town (measures public sector benefits in each town)\n",
     "* B : $1000(Bk - 0.63)^2$ US Dollars where Bk is the proportion of blacks by town\n",
-    "* LSTAT : percent lower status of the population\n",
-    "* MEDV : median value of owner occupied homes in 1000 US Dollars\n",
+    "* LSTAT : percent lower status of the population (proportion of adults without some high school education and proportion of male workers classified as laborers)\n",
+    "* MEDV : median value of owner occupied homes in 1,000 US Dollars\n",
     "\n",
-    "With this dataset, the classical goal is to predict MEDV depending on the first 13 variables.\n",
+    "The classical goal is to predict MEDV depending on the first 13 variables.\n",
     "\n",
     "## Reference\n",
     "\n",
     "* Regression Analysis with Python, Luca Massaron, Alberto Boschetti, Packt Publishing\n",
-    "* https://archive.ics.uci.edu/ml/datasets/Housing\n",
     "* Harrison, Jr., David, Rubinfeld, Daniel L. (1978/03).\"Hedonic housing prices and the demand for clean air.\" Journal of Environmental Economics and Management 5(1): 81-102. \n",
-    "* Belsley, Kuh & Welsch, 'Regression diagnostics: Identifying Influential Data and Sources of Collinearity', Wiley, 1980. 244-261.\n",
+    "* Belsley, Kuh & Welsch, \"Regression diagnostics: Identifying Influential Data and Sources of Collinearity\", Wiley, 1980. 244-261.\n",
     "* Quinlan,R. (1993). Combining Instance-Based and Model-Based Learning. In Proceedings on the Tenth International Conference of Machine Learning, 236-243, University of Massachusetts, Amherst. Morgan Kaufmann."
    ]
   },
