Clarifie la fonction de Morris

--- a/Usecases/morris/Morris-function.ipynb
+++ b/Usecases/morris/Morris-function.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# The Morris function\n",
     "\n",
+    "## Abstract\n",
+    "\n",
+    "This page documents the Morris test function. It is based on the otmorris module.\n",
+    "\n",
     "## Reference\n",
     "\n",
     "* M. D. Morris, 1991, Factorial sampling plans for preliminary computational experiments,Technometrics, 33, 161--174.\n",
@@ -58,7 +62,7 @@
     "\\beta_{i,j,\\ell} = \n",
     "\\begin{cases} \n",
     " -10 &\\mbox{if } i,j,\\ell=1,...,5\\\\\n",
-    "\\mathcal{N}(0,1) & \\mbox{otherwise}.\n",
+    "0 & \\mbox{otherwise}.\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
