Corrige la définition de la fonction

--- a/Usecases/morris/Morris-function.ipynb
+++ b/Usecases/morris/Morris-function.ipynb
@@ -13,6 +13,7 @@
     "## Reference\n",
     "\n",
     "* M. D. Morris, 1991, Factorial sampling plans for preliminary computational experiments,Technometrics, 33, 161--174.\n",
+    "* Metamodel-Based Sensitivity Analysis: Polynomial Chaos Expansions and Gaussian Processes. Loïc Le Gratiet, Stefano Marelli, and Bruno Sudret. R. Ghanem et al. (eds.), Handbook of Uncertainty Quantification, 2015\n",
     "* https://github.com/openturns/otmorris/tree/master\n",
     "* http://openturns.github.io/otmorris/master/\n",
     "\n",
@@ -20,10 +21,10 @@
     "\n",
     "The Morris function is a non-monotonic function of Morris from $[0,1]^{20}$ to $\\mathbb{R}$.\n",
     "\n",
-    "Let \n",
+    "For any $x\\in[0,1]^{20}$, let\n",
     "\n",
     "\\begin{align*}\n",
-    "y &= \\beta_0 + \\sum_{i=1}^{20} \\beta_i w_i + \\sum_{i<j}^{20} \\beta_{i,j} w_i w_j \\\\\n",
+    "g(x) &= \\beta_0 + \\sum_{i=1}^{20} \\beta_i w_i + \\sum_{i<j}^{20} \\beta_{i,j} w_i w_j \\\\\n",
     "  & \\sum_{i<j<\\ell}^{20} \\beta_{i,j,\\ell} w_i w_j w_\\ell \n",
     "   + \\sum_{i<j<\\ell<s}^{20} \\beta_{i,j,\\ell,s} w_i w_j w_\\ell w_s\n",
     "\\end{align*}\n",
