--- a/Usecases/fleche-tube/Deflection-tube.ipynb
+++ b/Usecases/fleche-tube/Deflection-tube.ipynb
@@ -4,16 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deflection of a tube\n",
+    "# Deflection of a tube"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Description\n",
     "\n",
     "We consider the deflection of a tube under a vertical stress.\n",
     "\n",
     "<img src=\"simply_supported_beam.png\" width=\"300\" />\n",
     "\n",
-    "The parameters of the model are :\n",
+    "The parameters of the model are:\n",
     "* F : the strength,\n",
     "* L : the length of the tube,\n",
-    "* a : position of the fixed part,\n",
+    "* a : position of the force,\n",
     "* D : external diameter of the tube,\n",
     "* d : internal diameter of the tube,\n",
     "* E : Young modulus.\n",
@@ -84,10 +91,9 @@
     "* https://upload.wikimedia.org/wikipedia/commons/f/ff/Simple_beam_with_offset_load.svg\n",
     "* https://en.wikipedia.org/wiki/Deflection_(engineering)\n",
     "* https://mechanicalc.com/reference/beam-deflection-tables\n",
-    "* Gere, James M.; Goodno, Barry J. Mechanics of Materials (Eigth ed.). pp. 1083–1087.\n",
-    "* Shigley, Mechanical Engineering Design, 1980, McGraw Hill\n",
-    "* Mechanics of Materials (Fourth SI edition), by J M Gere and S P Timoshenko, Stanley Thornes\n",
-    "* Statics and Mechanics of Materials (5th Edition) 5th Edition, Russell C. Hibbeler. Chapter 15: deflection of beams."
+    "* Shigley's Mechanical Engineering Design (9th Edition), Richard G. Budynas, J. Keith Nisbettn, McGraw Hill (2011)\n",
+    "* Mechanics of Materials (7th Edition), James M. Gere, Barry J. Goodno, Cengage Learning (2009)\n",
+    "* Statics and Mechanics of Materials (5th Edition), Ferdinand Beer, E. Russell Johnston, Jr., John DeWolf, David Mazurek. Mc Graw Hill (2011) Chapter 15: deflection of beams."
    ]
   },
   {
