Clarifie la définition du moment d'inertie

--- a/Usecases/fleche-tube/Deflection-tube.ipynb
+++ b/Usecases/fleche-tube/Deflection-tube.ipynb
@@ -29,9 +29,13 @@
     "\n",
     "<img src=\"tube-diameters.png\" width=\"200\" />\n",
     "\n",
-    "The moment of ineria of a round tube with external and internal diameters $D$ and $d$ are:\n",
+    "The area moment of inertia of the cross section about the neutral axis of a round tube (i.e. perpendicular to the section) with external and internal diameters $D$ and $d$ are:\n",
     "$$\n",
     "I = \\frac{\\pi (D^4-d^4)}{32}.\n",
+    "$$\n",
+    "Note: this equation can be written in terms of the external $R=D/2$ and internal radius $r=d/2$ as:\n",
+    "$$\n",
+    "I = \\frac{\\pi (R^4-r^4)}{2}.\n",
     "$$\n",
     "\n",
     "The vertical deviation $y$ of the beam at point $x$ is governed by the following differential equation (Statics and Mechanics of Materials, page 606):\n",
@@ -39,7 +43,7 @@
     "\\frac{d^2y}{dx^2} = \\frac{M(x)}{EI},\n",
     "$$\n",
     "where $M(x)$ is the bending moment. \n",
-    "Setting the boundary conditions and integrating twice leads to (Shigley, Mechanical Engineering Design, table A-9, page 1015):\n",
+    "Setting the boundary conditions and integrating twice leads to (Shigley's Mechanical Engineering Design, table A-9, page 1015):\n",
     "$$\n",
     "y(x) = -\\frac{Fbx}{6LEI} (L^2 - b^2 - x^2)\n",
     "$$\n",
