--- a/Usecases/crue-calage/Calage-crue-OT.ipynb
+++ b/Usecases/crue-calage/Calage-crue-OT.ipynb
@@ -54,7 +54,7 @@
     "$$\n",
     "pour tous $K_s, Q>0$.\n",
     "\n",
-    "<img src=\"https://forge.pleiade.edf.fr/attachments/download/24450/river_section_adjusted_light.png\" width=\"400\" />\n",
+    "<img src=\"river_section_adjusted_light.png\" width=\"400\" />\n",
     "\n",
     "### Lois de distribution\n",
     "\n",
