Derivation of the equations

--- a/Usecases/fleche-tube/Deflection-tube.ipynb
+++ b/Usecases/fleche-tube/Deflection-tube.ipynb
@@ -36,18 +36,152 @@
     "Note: this equation can be written in terms of the external $R=D/2$ and internal radius $r=d/2$ as:\n",
     "$$\n",
     "I = \\frac{\\pi (R^4-r^4)}{2}.\n",
-    "$$\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Integration of the differential equation\n",
     "\n",
     "The vertical deviation $y$ of the beam at point $x$ is governed by the following differential equation (Statics and Mechanics of Materials, page 606):\n",
     "$$\n",
     "\\frac{d^2y}{dx^2} = \\frac{M(x)}{EI},\n",
     "$$\n",
     "where $M(x)$ is the bending moment. \n",
-    "Setting the boundary conditions and integrating twice leads to (Shigley's Mechanical Engineering Design, table A-9, page 1015):\n",
+    "\n",
+    "For $x\\in[0,a]$, the bending moment is:\n",
+    "$$\n",
+    "M(x) = \\frac{Fbx}{L}.\n",
+    "$$\n",
+    "For $x\\in[a,L]$, the bending moment is:\n",
+    "$$\n",
+    "M(x) = \\frac{Fa}{L} (L-x).\n",
+    "$$\n",
+    "The previous equation implies:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "M(x) \n",
+    "&= Fa - \\frac{Fax}{L} \\\\\n",
+    "&= Fa - \\frac{Fax}{L} -Fx  + Fx \\\\\n",
+    "&= - F(x-a) + \\frac{F(L-a)x}{L} \\\\\n",
+    "&= - F(x-a) + \\frac{Fbx}{L} \\\\\n",
+    "&= \\frac{Fbx}{L} - F(x-a).\n",
+    "\\end{align*}\n",
+    "\n",
+    "Substituting the moments into the differential, we get:\n",
+    "$$\n",
+    "\\frac{d^2y}{dx^2} = \\frac{Fbx}{LEI}, \\qquad x\\in[0,a]\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "\\frac{d^2y}{dx^2} = \\frac{Fbx}{LEI} - \\frac{F(x-a)}{EI}, \\qquad x\\in[a,L].\n",
+    "$$\n",
+    "\n",
+    "We integrate once the previous equations:\n",
+    "$$\n",
+    "\\frac{dy}{dx} (x) = \\frac{Fbx^2}{2LEI} + c_1, \\qquad x\\in[0,a]\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "\\frac{dy}{dx} (x) =  \\frac{Fbx^2}{2LEI} - \\frac{F(x-a)^2}{2 EI} + c_2, \\qquad x\\in[a,L],\n",
+    "$$\n",
+    "where $c_1, c_2\\in\\mathbb{R}$ are integration constants.\n",
+    "\n",
+    "We integrate a second time and get:\n",
+    "$$\n",
+    "y(x) = \\frac{Fbx^3}{6LEI} + c_1 x + c_3, \\qquad x\\in[0,a]\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "y(x) =  \\frac{Fbx^3}{6LEI} - \\frac{F(x-a)^3}{6 EI} + c_2 x + c_4, \\qquad x\\in[a,L],\n",
+    "$$\n",
+    "where $c_3, c_4\\in\\mathbb{R}$ are integration constants."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computation of the integration constants\n",
+    "\n",
+    "Four conditions must be used in order to compute the integration constants $c_1,c_2,c_3,c_4$. \n",
+    "\n",
+    "The slope at point $x=a$ must be continuous, i.e. \n",
+    "$$\n",
+    "\\lim_{x\\rightarrow a^-} \\frac{dy}{dx} (x) = \\lim_{x\\rightarrow a^+} \\frac{dy}{dx} (x).\n",
+    "$$\n",
+    "This implies:\n",
+    "$$\n",
+    "\\frac{Fba^2}{2LEI} + c_1, = \\frac{Fba^2}{2LEI} + c_2,\n",
+    "$$\n",
+    "and leads to the equation:\n",
+    "$$\n",
+    "c_1 = c_2.\n",
+    "$$\n",
+    "\n",
+    "The deflection at point $x=a$ must be continuous, i.e. \n",
+    "$$\n",
+    "\\lim_{x\\rightarrow a^-} y (x) = \\lim_{x\\rightarrow a^+} y (x).\n",
+    "$$\n",
+    "This implies:\n",
+    "$$\n",
+    "\\frac{Fba^3}{6LEI} + c_1 a + c_3 = \n",
+    "\\frac{Fba^3}{6LEI} + c_2 a + c_4.\n",
+    "$$\n",
+    "Since $c_1=c_2$, the previous equation implies:\n",
+    "$$\n",
+    "c_3 = c_4.\n",
+    "$$\n",
+    "\n",
+    "The deflection at point $x=0$ is zero, which implies:\n",
+    "$$\n",
+    "y(0) = c_3 = 0.\n",
+    "$$\n",
+    "This implies:\n",
+    "$$\n",
+    "c_4 = 0.\n",
+    "$$\n",
+    "\n",
+    "The deflection at point $x=L$ is zero, which implies:\n",
+    "$$\n",
+    "y(x) =  \\frac{FbL^3}{6LEI} - \\frac{F(L-a)^3}{6 EI} + c_2 L + c_4 = 0.\n",
+    "$$\n",
+    "Using $L-a = b$ and $c_4=0$, we get:\n",
+    "$$\n",
+    "\\frac{FbL^2}{6EI} - \\frac{Fb^3}{6 EI} + c_2 L= 0,\n",
+    "$$\n",
+    "which implies:\n",
+    "$$\n",
+    "\\frac{Fb(L^2-b^2)}{6 EI} + c_2 L= 0,\n",
+    "$$\n",
+    "Hence,\n",
+    "$$\n",
+    "c_2 = - \\frac{Fb(L^2-b^2)}{6 L EI}.\n",
+    "$$\n",
+    "The equation $c_1=c_2$ implies:\n",
+    "$$\n",
+    "c_1 = - \\frac{Fb(L^2-b^2)}{6 L EI}.\n",
+    "$$\n",
+    "\n",
+    "Substituting $c_1$ and $c_2$ into the equations of the deflection implies (Shigley's Mechanical Engineering Design, table A-9, page 1015):\n",
     "$$\n",
     "y(x) = -\\frac{Fbx}{6LEI} (L^2 - b^2 - x^2)\n",
     "$$\n",
-    "for any $x\\in[0,a]$. \n",
+    "for any $x\\in[0,a]$ and \n",
+    "$$\n",
+    "y(x) = -\\frac{Fbx}{6LEI} (L^2 - b^2 - x^2) - \\frac{F(x-a)^3}{6EI}\n",
+    "$$\n",
+    "for any $x\\in[a,L]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deflection of the tube\n",
+    "\n",
     "At the point $x=a$, the deflection is \n",
     "$$\n",
     "y(a) = -\\frac{Fba}{6LEI} (L^2 - b^2 - a^2).\n",
@@ -62,16 +196,26 @@
     "$$\n",
     "Plugging this equation into $y(a)$, we get:\n",
     "$$\n",
-    "y(a) = -\\frac{Fba}{6LEI} 2ab = = -\\frac{Fb^2a^2}{3LEI}.\n",
+    "y(a) = -\\frac{Fba}{6LEI} 2ab = -\\frac{Fb^2a^2}{3LEI}.\n",
     "$$\n",
-    "We finally use the equation $b = L-a$. \n",
+    "We finally use the equation $b = L-a$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model\n",
     "\n",
-    "The vertical deflection is :\n",
+    "The vertical deflection is:\n",
     "$$\n",
-    "g(X) = \n",
-    "- F \\frac{a^2 (L-a)^2}{3 E L I},\n",
+    "g(X) = - F \\frac{a^2 (L-a)^2}{3 E L I},\n",
     "$$\n",
-    "where $X=(F,L,a,D,d,E)$.\n",
+    "where \n",
+    "$$\n",
+    "I = \\frac{\\pi (D^4-d^4)}{32}.\n",
+    "$$\n",
+    "and $X=(F,L,a,D,d,E)$.\n",
     "\n",
     "The following table presents the distributions of the random variables. These variables are assumed to be independent.\n",
     "\n",
@@ -82,7 +226,7 @@
     "|a|Uniform(0.7,1.2)|\n",
     "|D|Triangular(0.75,0.8,0.85)|\n",
     "|d|Triangular(0.09,0.1,0.11)|\n",
-    "|E|Normal(200000,2000)|\n"
+    "|E|Normal(200000,2000)|"
    ]
   },
   {
@@ -96,9 +240,9 @@
     "* https://en.wikipedia.org/wiki/Deflection_(engineering)\n",
     "* https://mechanicalc.com/reference/beam-deflection-tables\n",
     "* https://en.wikipedia.org/wiki/Second_moment_of_area\n",
-    "* Shigley's Mechanical Engineering Design (9th Edition), Richard G. Budynas, J. Keith Nisbettn, McGraw Hill (2011)\n",
-    "* Mechanics of Materials (7th Edition), James M. Gere, Barry J. Goodno, Cengage Learning (2009)\n",
-    "* Statics and Mechanics of Materials (5th Edition), Ferdinand Beer, E. Russell Johnston, Jr., John DeWolf, David Mazurek. Mc Graw Hill (2011) Chapter 15: deflection of beams."
+    "* Shigley's Mechanical Engineering Design (9th Edition), Richard G. Budynas, J. Keith Nisbettn, McGraw Hill (2011). Table A-9, page 1015\n",
+    "* Mechanics of Materials (7th Edition), James M. Gere, Barry J. Goodno, Cengage Learning (2009). Example 9-3, page 692.\n",
+    "* Statics and Mechanics of Materials (5th Edition), Ferdinand Beer, E. Russell Johnston, Jr., John DeWolf, David Mazurek. Mc Graw Hill (2011) Chapter 15: deflection of beams. Page 692. "
    ]
   },
   {
@@ -141,7 +285,7 @@
     "Xd=ot.Triangular(0.09,0.1,0.11)\n",
     "XE=ot.Normal(200000,2000)\n",
     "XF.setDescription([\"Force\"])\n",
-    "XL.setDescription([\"Longueur\"])\n",
+    "XL.setDescription([\"Length\"])\n",
     "Xa.setDescription([\"Location\"])\n",
     "XD.setDescription([\"External diameter\"])\n",
     "Xd.setDescription([\"Internal diameter\"])\n",
