--- a/Usecases/logistique-calage/Logistique-calage.ipynb
+++ b/Usecases/logistique-calage/Logistique-calage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Le modèle logistique pour le calage"
+    "# Calibration of the logistic growth model"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Définit les bornes des variables du problème pour la variable $\\theta$."
+    "Defines the bounds of the variables of the problem for the parameter variable $\\theta$."
    ]
   },
   {
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Définit le point de départ de l'algorithme d'optimisation."
+    "Defines the starting point of the optimization algorithm."
    ]
   },
   {
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calcule les hauteurs d'eau prédites au point initial."
+    "Computes the predicted population before calibration."
    ]
   },
   {
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Crée la fonction coût."
+    "Creates the cost function."
    ]
   },
   {
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Créée le problème d'optimisation."
+    "Creates the optimization problem."
    ]
   },
   {
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choisit l'algorithme de résolution local : Cobyla."
+    "Choose the local optimization algorithm."
    ]
   },
   {
@@ -316,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On résout le problème en éxécutant la méthode run()."
+    "Solve the problem with the `run` method."
    ]
   },
   {
@@ -353,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calcule la population prédite au point optimal."
+    "Compute the predicted population for the optimal parameter."
    ]
   },
   {
@@ -411,9 +411,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On observe que la solution optimale n'est pas très satisfaisante.\n",
+    "The calibration is not accurate enough.\n",
     "\n",
-    "C'est pourquoi on décide d'utiliser un algorithme de recherche globale de type \"Multistart\"."
+    "This is why we decide to use a global \"Multistart\" algorithm.\n",
+    "\n",
+    "Generate the random starting points."
    ]
   },
   {
@@ -422,7 +424,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Génère l'échantillon des points de départ\n",
     "npoints = 100\n",
     "startingPoints = ot.Sample(npoints,dimCalage)\n",
     "for j in range(dimCalage):\n",
@@ -430,6 +431,13 @@
     "    mySampleJ = myUnif.getSample(npoints)\n",
     "    for i in range(npoints):\n",
     "        startingPoints[i,j] = mySampleJ[i,0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configure the starting point and run."
    ]
   },
   {
@@ -452,7 +460,6 @@
     }
    ],
    "source": [
-    "# Configure les points de départ\n",
     "algo = ot.MultiStart(algoLocal, startingPoints)\n",
     "# Lance l'optimisation\n",
     "algo.run()\n",
@@ -466,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calcule la population prédite au point optimal."
+    "Compute the predicted population for the optimal parameter."
    ]
   },
   {
@@ -512,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On observe que le calage est satisfaisant."
+    "We see that the predictions fit the observations much better after calibration."
    ]
   }
  ],
@@ -532,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
