--- a/Usecases/fleche-tube/Deflection-tube.ipynb
+++ b/Usecases/fleche-tube/Deflection-tube.ipynb
@@ -70,9 +70,9 @@
     "&= \\frac{Fbx}{L} - F(x-a).\n",
     "\\end{align*}\n",
     "\n",
-    "Substituting the moments into the differential, we get:\n",
+    "Substituting the moments into the differential equation, we get:\n",
     "$$\n",
-    "\\frac{d^2y}{dx^2} = \\frac{Fbx}{LEI}, \\qquad x\\in[0,a]\n",
+    "\\frac{d^2y}{dx^2} = \\frac{Fbx}{LEI}, \\qquad x\\in[0,a],\n",
     "$$\n",
     "and\n",
     "$$\n",
@@ -81,7 +81,7 @@
     "\n",
     "We integrate once the previous equations:\n",
     "$$\n",
-    "\\frac{dy}{dx} (x) = \\frac{Fbx^2}{2LEI} + c_1, \\qquad x\\in[0,a]\n",
+    "\\frac{dy}{dx} (x) = \\frac{Fbx^2}{2LEI} + c_1, \\qquad x\\in[0,a],\n",
     "$$\n",
     "and\n",
     "$$\n",
@@ -91,7 +91,7 @@
     "\n",
     "We integrate a second time and get:\n",
     "$$\n",
-    "y(x) = \\frac{Fbx^3}{6LEI} + c_1 x + c_3, \\qquad x\\in[0,a]\n",
+    "y(x) = \\frac{Fbx^3}{6LEI} + c_1 x + c_3, \\qquad x\\in[0,a],\n",
     "$$\n",
     "and\n",
     "$$\n",
@@ -114,7 +114,7 @@
     "$$\n",
     "This implies:\n",
     "$$\n",
-    "\\frac{Fba^2}{2LEI} + c_1, = \\frac{Fba^2}{2LEI} + c_2,\n",
+    "\\frac{Fba^2}{2LEI} + c_1 = \\frac{Fba^2}{2LEI} + c_2,\n",
     "$$\n",
     "and leads to the equation:\n",
     "$$\n",
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
