--- a/Usecases/axial-stressed-beam/axial_stressed_beam.ipynb
+++ b/Usecases/axial-stressed-beam/axial_stressed_beam.ipynb
@@ -364,7 +364,7 @@
    "source": [
     "sampleSize = 500\n",
     "sampleG = myfunction.getSample(sampleSize)\n",
-    "ot.VisualTest_DrawHistogram(sampleG)"
+    "ot.HistogramFactory().build(sampleG).drawPDF()"
    ]
   },
   {
