--- a/Usecases/cantilever-beam/cantilever_beam.ipynb
+++ b/Usecases/cantilever-beam/cantilever_beam.ipynb
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "graph = ot.VisualTest_DrawHistogram(Y)\n",
+    "graph = ot.HistogramFactory().build(Y).drawPDF()\n",
     "graph.setXTitle(\"Y (cm)\")\n",
     "graph.setLegends([\"\"])\n",
     "graph"
