--- a/Usecases/cas-perrin/Sensibilite-Exemple-Perrin.ipynb
+++ b/Usecases/cas-perrin/Sensibilite-Exemple-Perrin.ipynb
@@ -45,6 +45,7 @@
    "outputs": [],
    "source": [
     "import openturns as ot\n",
+    "import openturns.viewer\n",
     "import pylab as pl\n",
     "import numpy as np"
    ]
@@ -142,7 +143,7 @@
     }
    ],
    "source": [
-    "histo = ot.VisualTest.DrawHistogram(sampleY)\n",
+    "histo = ot.HistogramFactory().build(sampleY).drawPDF()\n",
     "histo.setXTitle(\"Y\")\n",
     "histo.setTitle(\"\")\n",
     "histo.setLegends([\"Data\"])\n",
