--- a/Usecases/crue-calage/Calage-crue-OT.ipynb
+++ b/Usecases/crue-calage/Calage-crue-OT.ipynb
@@ -497,7 +497,7 @@
    "source": [
     "# Calcule les résidus\n",
     "r = Hobs - HpredictedStar\n",
-    "ot.VisualTest.DrawHistogram(r)"
+    "ot.HistogramFactory().build(r).drawPDF()"
    ]
   },
   {
