--- a/Usecases/crue-propagation/cas-crue.ipynb
+++ b/Usecases/crue-propagation/cas-crue.ipynb
@@ -452,7 +452,7 @@
    ],
    "source": [
     "outComputedPoints = f.getOutputHistory()\n",
-    "histoGraph = ot.VisualTest.DrawHistogram(outComputedPoints,100)\n",
+    "histoGraph = ot.HistogramFactory().build(outComputedPoints).drawPDF()\n",
     "histoGraph.setTitle(\"Histogramme de la surverse\")\n",
     "histoGraph.setXTitle(\"S (m)\")\n",
     "histoGraph.setYTitle(\"Frequence\")\n",
