--- a/Usecases/fleche-tube/Deflection-tube.ipynb
+++ b/Usecases/fleche-tube/Deflection-tube.ipynb
@@ -338,7 +338,7 @@
     }
    ],
    "source": [
-    "graph = ot.VisualTest.DrawHistogram(outputSample)\n",
+    "graph = ot.HistogramFactory().build(outputSample).drawPDF()\n",
     "graph.setTitle(\"Vertical deflection - N=%d\" % (n))\n",
     "graph.setXTitle(\"Vertical deflection\")\n",
     "graph.setLegends([\"\"])\n",
