--- a/Usecases/morris/Morris-function.ipynb
+++ b/Usecases/morris/Morris-function.ipynb
@@ -187,7 +187,7 @@
     }
    ],
    "source": [
-    "graph = ot.VisualTest_DrawHistogram(sampleY)\n",
+    "graph = ot.HistogramFactory().build(sampleY).drawPDF()\n",
     "graph.setLegends([\"\"])\n",
     "graph.setTitle(\"Morris function\")\n",
     "graph.setXTitle(\"g(X)\")\n",
