Created CircleCI config. Updated to 1.13

--- a/Usecases/oscillateur-nonlineaire/nonlinear-oscillator.ipynb
+++ b/Usecases/oscillateur-nonlineaire/nonlinear-oscillator.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y = ot.RandomVector(g, X)"
+    "Y = ot.CompositeRandomVector(g, X)"
    ]
   },
   {
