Translated Chaboche model. Clarified repo content. Updated axial stressed beam.

--- a/Usecases/oscillateur-nonlineaire/nonlinear-oscillator.ipynb
+++ b/Usecases/oscillateur-nonlineaire/nonlinear-oscillator.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## Description\n",
     "\n",
-    "The aim here, is to assess reliability of a two-degree-of-freedom primary-secondary system under a white noise base acceleration. \n",
+    "The aim is to assess reliability of a two-degree-of-freedom primary-secondary system under a white noise base acceleration. \n",
     "\n",
     "<img src=\"nonlinear-oscillator.png\" width=\"400\" />\n",
     "\n",
@@ -257,13 +257,6 @@
     "pflen = result.getConfidenceLength(1-alpha)\n",
     "print(\"%.2f%% confidence interval = [%f,%f]\" % ((1-alpha)*100,pf-pflen/2,pf+pflen/2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -282,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
